force-app/main/default/objects/Customer_Review__c/Customer_Review__c.object-meta.xml
<CustomObject>
    <label>Customer Review</label>
    <nameField>
        <label>Customer Review Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Customer Reviews</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>