force-app/main/default/objects/Customer_Review__c/fields/CreateDate__c.field-meta.xml
<CustomField>
    <fullName>CreateDate__c</fullName>
    <label>CreateDate</label>
    <type>DateTime</type>
</CustomField>