force-app/main/default/objects/Customer_Review__c/fields/Review__c.field-meta.xml
<CustomField>
    <fullName>Review__c</fullName>
    <label>Review</label>
    <length>100</length>
    <type>Text</type>
</CustomField>