force-app/main/default/objects/Customer_Review__c/fields/S_No__c.field-meta.xml
<CustomField>
    <fullName>S_No__c</fullName>
    <label>S No</label>
    <type>AutoNumber</type>
</CustomField>